aws/order-manifetst.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderapp
  template:
    metadata:
      labels:
        app: orderapp
    spec:
      containers:
        - name: orderapp
          image: yogeshkadam1729/order-service:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: orderapp
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
