aws/shopslisting-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopslistingapp
  labels:
    app: shopslistingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopslistingapp
  template:
    metadata:
      labels:
        app: shopslistingapp
    spec:
      containers:
        - name: shopslistingapp
          image: yogeshkadam1729/shops-service:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: shopslisting-service
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: shopslistingapp
